# weather.im

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  SECURITY_PATCH_PR.md  environment.yml  pip_requirements.txt  pyproject.toml
.github/: dependabot.yml  setuppaths.sh
.github/workflows/: build.yml  codeql.yml  etchosts.txt
config/: settings.inc.php.tpl  weather-im-vhost.conf
html/: create.php  ext-3.4.1  facebook.php  index.php  p.php  robots.txt
html/http_errors/: error404.php
html/iembot/: index.phtml  rooms.js  static.js
html/iembot/config/: index.py
html/live/: .gitignore  README.md  data-proxy.php  index.php  live.css  live.js  pass.php
html/live/js/: AllChatMessageWindow.js  ChatGridPanel.js  ChatPanel.js  ChatTabPanel.js  ChatTextEntry.js  ChatUI.js  ChatView.js  DataTip.js  DebugWindow.js  Dialogs.js  Events.js  LiveViewport.js  LoginPanel.js  MUCChatPanel.js  MUCRoomUsers.js  MapLegend.js  MapPanel.js  TabLoginPanel.js  UIBuilder.js  UserColors.js  XMPPConn.js  disco.js  overrides.js  pattern.js  roster.js  strophe.js
html/oldlive/: bug.php  data-proxy.php  index.php
html/oldlive/js/: AllChatMessageWindow.js  ChatGridPanel.js  ChatPanel.js  ChatTabPanel.js  ChatTextEntry.js  ChatView.js  Dialogs.js  (+10 more)
iembot/: iembot.tac  run.sh
iembot/logs/: README.md
include/: header.php  myview.php  props.php  utils.php  wfo_locs.php
include/templates/: footer.phtml  header.phtml  navbar.phtml  single.phtml
punjab/: initd-punjab  punjab.tac  run.sh
pylib/weather_im/: iembot_config.py
tests/: test_iembot_config.py
(+1 files in other folders)
